--- a/testing/config/alertmanager.yml
+++ b/testing/config/alertmanager.yml
@@ -3,7 +3,7 @@ global:
   smtp_from: 'alertmanager@observastack.local'
 
 route:
-  group_by: ['alertname']
+  group_by: ['alertname','cluster', 'prometheus', 'service']
   group_wait: 10s
   group_interval: 10s
   repeat_interval: 1h
@@ -15,8 +15,6 @@ receivers:
   - url: 'http://127.0.0.1:5001/'
 
 inhibit_rules:
-  - source_match:
-      severity: 'critical'
-    target_match:
-      severity: 'warning'
-    equal: ['alertname', 'dev', 'instance']
+  - source_matchers:  [ 'severity="critical"' ]
+    target_matchers:  [ 'severity="warning"' ]
+    equal: ['alertname', 'cluster', 'instance']
