--- a/testing/config/loki.yml
+++ b/testing/config/loki.yml
@@ -25,10 +25,10 @@ query_range:
 
 schema_config:
   configs:
-    - from: 2020-10-24
-      store: boltdb-shipper
+    - from: 2024-01-01 # A recent date for the new schema
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
