--- a/testing/config/prometheus.yml
+++ b/testing/config/prometheus.yml
@@ -1,10 +1,16 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  external_labels:
+    monitor: 'observastack-monitor'
+    cluster: 'docker-compose'
+    prometheus: 'prometheus'
+    replica: a
 
 rule_files:
   # - "first_rules.yml"
   # - "second_rules.yml"
+
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -20,18 +26,26 @@ scrape_configs:
     static_configs:
       - targets: ['frontend:3000']
 
-  - job_name: 'postgres'
-    static_configs:
-      - targets: ['postgres:5432']
-
-  - job_name: 'redis'
-    static_configs:
-      - targets: ['redis:6379']
-
-  - job_name: 'opensearch'
-    static_configs:
-      - targets: ['opensearch:9200']
+#  - job_name: 'redis'
+#    static_configs:
+#      - targets: ['redis:6379']
 
   - job_name: 'redpanda'
     static_configs:
       - targets: ['redpanda:9644']
+
+  - job_name: 'loki'
+    static_configs:
+      - targets: ['loki:3100']
+
+  - job_name: 'tempo'
+    static_configs:
+      - targets: ['tempo:3200']
+
+  - job_name: 'keycloak'
+    static_configs:
+      - targets: ['keycloak:9000']
+
+  - job_name: 'health-monitor'
+    static_configs:
+      - targets: ['health-monitor:8080']  # /metrics
